--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack": "^4.41.2"
   },
   "dependencies": {
+    "@openid/appauth": "^1.2.6",
     "source-map-support": "^0.5.16"
   },
   "build": {
