--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "app:nobuild": "electron dist/main/main.js",
     "app": "cross-env ELECTRON_WEBPACK_APP_ENV=preview npm run build:noenv && npm run app:nobuild",
     "test:e2e": "cross-env ELECTRON_WEBPACK_APP_ENV=test npm run build && ts-mocha -p config/mocha/tsconfig.json --config config/mocha/config.e2e.js --bail spec/**/*.spec.ts",
-    "test:unit": "mochapack --webpack-config config/mocha/webpack.config.js --require config/mocha/config.unit.js --quiet \"src/**/*.spec.ts\"",
-    "test:unit:watch": "npm run test:unit -- --watch",
-    "test:all": "concurrently \"npm run test:unit -- --bail\" \"npm run test:e2e\"",
+    "test:tron": "cross-env TS_NODE_PROJECT=config/mocha/tsconfig.json electron-mocha --config config/mocha/.mocharc.js -r ts-node/register \"src/renderer/**/*.e.spec.ts\"",
+    "test:tron:watch": "npm run test:tron -- --watch",
+    "test:pack": "mochapack --webpack-config config/mocha/webpack.config.js --require config/mocha/config.unit.js --quiet \"src/**/*.w.spec.ts\"",
+    "test:pack:watch": "npm run test:pack -- --watch",
+    "test:watch": "concurrently \"npm run test:pack:watch\" \"npm run test:tron:watch\"",
+    "test:all": "concurrently \"npm run test:pack -- --bail\" \"npm run test:tron -- --bail\" \"npm run test:e2e\"",
     "dist": "cross-env ELECTRON_WEBPACK_APP_IS_BUILT=true npm run build && electron-builder",
     "dist:mac": "npm run dist -- -m",
     "dist:win": "npm run dist -- -w --x64"
@@ -29,6 +32,7 @@
     "cross-env": "^6.0.3",
     "electron": "^7.1.3",
     "electron-builder": "^21.2.0",
+    "electron-mocha": "^8.1.2",
     "electron-webpack": "^2.7.4",
     "electron-webpack-ts": "^3.2.0",
     "electron-webpack-vue": "^2.3.0",
@@ -38,6 +42,7 @@
     "mochapack": "^1.1.13",
     "spectron": "^9.0.0",
     "ts-mocha": "^6.0.0",
+    "ts-node": "^8.5.4",
     "typescript": "^3.7.2",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10",
