Set up for attempted improvement to mochapack to utilize electron-mocha

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "app:nobuild": "electron dist/main/main.js",
     "app": "cross-env ELECTRON_WEBPACK_APP_ENV=preview npm run build:noenv && npm run app:nobuild",
     "test:e2e": "cross-env ELECTRON_WEBPACK_APP_ENV=test npm run build && ts-mocha -p config/mocha/tsconfig.json --config config/mocha/config.e2e.js --bail spec/**/*.spec.ts",
-    "test:tron": "cross-env TS_NODE_PROJECT=config/mocha/tsconfig.json electron-mocha --config config/mocha/.mocharc.js -r ts-node/register \"src/renderer/**/*.e.spec.ts\"",
-    "test:tron:watch": "npm run test:tron -- --watch",
-    "test:pack": "mochapack --webpack-config config/mocha/webpack.config.js --require config/mocha/config.unit.js --quiet \"src/**/*.w.spec.ts\"",
-    "test:pack:watch": "npm run test:pack -- --watch",
-    "test:watch": "concurrently \"npm run test:pack:watch\" \"npm run test:tron:watch\"",
-    "test:all": "concurrently \"npm run test:pack -- --bail\" \"npm run test:tron -- --bail\" \"npm run test:e2e\"",
+    "test:tron": "cross-env TS_NODE_PROJECT=config/mocha/tsconfig.json electron-mocha --config config/mocha/.mocharc.js -r ts-node/register",
+    "test:main": "npm run test:tron -- \"src/main/**/*.e.spec.ts\"",
+    "test:main:watch": "npm run test:main -- --watch",
+    "test:renderer": "npm run test:tron -- --renderer \"src/renderer/**/*.e.spec.ts\"",
+    "test:renderer:watch": "npm run test:renderer -- --watch",
+    "test:bundle": "mochapack --webpack-config config/mocha/webpack.config.js --require config/mocha/config.unit.js --quiet \"src/**/*.w.spec.ts\"",
+    "test:bundle:watch": "npm run test:bundle -- --watch",
+    "test:watch": "concurrently \"npm run test:bundle:watch\" \"npm run test:main:watch\" \"npm run test:renderer:watch\"",
+    "test:all": "concurrently \"npm run test:bundle -- --bail\" \"npm run test:main -- --bail\" \"npm run test:renderer -- --bail\" \"npm run test:e2e\"",
     "dist": "cross-env ELECTRON_WEBPACK_APP_IS_BUILT=true npm run build && electron-builder",
     "dist:mac": "npm run dist -- -m",
     "dist:win": "npm run dist -- -w --x64"
@@ -26,6 +29,7 @@
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.14",
+    "@types/sinon": "^7.5.1",
     "@vue/test-utils": "^1.0.0-beta.30",
     "chai": "^4.2.0",
     "concurrently": "^5.0.0",
@@ -40,6 +44,7 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^6.2.2",
     "mochapack": "^1.1.13",
+    "sinon": "^7.5.0",
     "spectron": "^9.0.0",
     "ts-mocha": "^6.0.0",
     "ts-node": "^8.5.4",
