--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A playground for POCs for electron projects",
   "scripts": {
+    "postinstall": "electron-rebuild",
     "build:noenv": "electron-webpack",
     "build": "cross-env ELECTRON_WEBPACK_APP_ENV=production npm run build:noenv",
     "dev": "cross-env ELECTRON_WEBPACK_APP_ENV=development electron-webpack dev",
@@ -21,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^4.2.6",
+    "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.14",
     "@vue/test-utils": "^1.0.0-beta.30",
@@ -29,6 +31,7 @@
     "cross-env": "^6.0.3",
     "electron": "^7.1.3",
     "electron-builder": "^21.2.0",
+    "electron-rebuild": "^1.8.8",
     "electron-webpack": "^2.7.4",
     "electron-webpack-ts": "^3.2.0",
     "electron-webpack-vue": "^2.3.0",
@@ -44,6 +47,9 @@
     "webpack": "^4.41.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "keytar": "^5.0.0",
     "source-map-support": "^0.5.16"
   },
   "electronWebpack": {
